RESOLVED FIXED284488
REGRESSION(287653@main): [macOS Debug wk2] 2 tests in jquery are constantly crashing
https://bugs.webkit.org/show_bug.cgi?id=284488
Summary REGRESSION(287653@main): [macOS Debug wk2] 2 tests in jquery are constantly c...
Marta Darbinyan
Reported 2024-12-11 14:24:06 PST
The following tests are constant crash in macOS and appear in EWS Sequoia queue as flaky on different PRs. jquery/attributes.html jquery/event.html The regression points to 287653@main change. Error output: Thread 7 Crashed:: Dispatch queue: 0 com.apple.JavaScriptCore 0x12daf75c4 WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.JavaScriptCore 0x12c8a5860 JSC::DFG::SpeculativeJIT::compileGetByValOnString(JSC::DFG::Node*, WTF::ScopedLambda<std::__1::tuple<JSC::JSValueRegs, JSC::DataFormat> (JSC::DataFormat, bool)> const&) 2 com.apple.JavaScriptCore 0x12cabbfcc JSC::DFG::SpeculativeJIT::compileGetByVal(JSC::DFG::Node*, WTF::ScopedLambda<std::__1::tuple<JSC::JSValueRegs, JSC::DataFormat> (JSC::DataFormat, bool)> const&) 3 com.apple.JavaScriptCore 0x12c905428 JSC::DFG::SpeculativeJIT::compileEnumeratorGetByVal(JSC::DFG::Node*)::$_0::operator()(JSC::JSValueRegs) const 4 com.apple.JavaScriptCore 0x12c9052c4 JSC::DFG::SpeculativeJIT::compileEnumeratorGetByVal(JSC::DFG::Node*) 5 com.apple.JavaScriptCore 0x12cac5964 JSC::DFG::SpeculativeJIT::compile(JSC::DFG::Node*) 6 com.apple.JavaScriptCore 0x12c88db34 JSC::DFG::SpeculativeJIT::compileCurrentBlock() 7 com.apple.JavaScriptCore 0x12c879608 JSC::DFG::SpeculativeJIT::compileBody() 8 com.apple.JavaScriptCore 0x12c87ac78 JSC::DFG::SpeculativeJIT::compileFunction() 9 com.apple.JavaScriptCore 0x12dc71bf8 JSC::DFG::Plan::compileInThreadImpl() 10 com.apple.JavaScriptCore 0x12e190ac8 JSC::JITPlan::compileInThread(JSC::JITWorklistThread*) 11 com.apple.JavaScriptCore 0x12e1edee4 JSC::JITWorklistThread::work() 12 com.apple.JavaScriptCore 0x12c68a2d4 WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0::operator()() const 13 com.apple.JavaScriptCore 0x12c689e84 WTF::Detail::CallableWrapper<WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0, void>::call() 14 com.apple.JavaScriptCore 0x12c6a7170 WTF::Function<void ()>::operator()() const 15 com.apple.JavaScriptCore 0x12c7f7884 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 16 com.apple.JavaScriptCore 0x12c803fd0 WTF::wtfThreadEntryPoint(void*) 17 libsystem_pthread.dylib 0x19ec532e4 _pthread_start + 136 /AppleInternal/Library/BuildRoots/e0873e53-5185-11ef-9a51-9ab6d782fe32/Library/Caches/com.apple.xbs/Sources/libpthread/src/pthread.c:931 18 libsystem_pthread.dylib 0x19ec4e0fc thread_start + 8 History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=jquery%2Fattributes.html&test=jquery%2Fevent.html&style=debug&flavor=wk2 Test results: https://ews-build.webkit.org/#/builders/122/builds/5424
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-11 14:25:17 PST
Yusuke Suzuki
Comment 2 2024-12-11 16:18:07 PST
EWS
Comment 3 2024-12-11 18:16:00 PST
Committed 287713@main (21f6bd52b6bf): <https://commits.webkit.org/287713@main> Reviewed commits have been landed. Closing PR #37807 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.