REGRESSION(287653@main): [macOS Debug wk2] 2 tests in jquery are constantly crashing https://bugs.webkit.org/show_bug.cgi?id=284488 rdar://141314075

Reviewed by Keith Miller and Yijia Huang.

287653@main is wrong since it can take EnumeratorGetByVal. This patch
fixes the wrong assumptions.

* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileGetByValOnString):

Canonical link: https://commits.webkit.org/287713@main